# SDL3Test

./: .gitignore  CMakeLists.txt
include/: Actor.h  AnimSpriteComponent.h  BGSpriteComponent.h  Component.h  Game.h  Maths.h  Ship.h  SpriteComponent.h
src/: Actor.cpp  AnimSpriteComponent.cpp  BGSpriteComponent.cpp  Game.cpp  Maths.cpp  Ship.cpp  SpriteComponent.cpp  demo.cpp  main.cpp
